--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/akilaadi/danveem.web#readme",
   "dependencies": {
+    "aws-sdk": "^2.88.0",
     "body-parser": "^1.17.2",
     "connect-dynamodb": "^1.0.11",
     "cookie-parser": "^1.4.3",
