--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-AWS_ACCESS_KEY_ID=<your access key>
-AWS_SECRET_ACCESS_KEY=<your secret key>
+AWS_ACCESS_KEY_ID=AKIAJZ5XJJF4VNYVBNVQ
+AWS_SECRET_ACCESS_KEY=l8pwXsmPWc6oXPtAzXG/L5FXiP2Cgq2nvRP/cSaL
+AWS_REGION=ap-southeast-1
+API_SERVICE_URL=http://localhost:3000
